IOUtils fix, argument tokenizer
Former-commit-id: 7ffa5d8563443cb6d6897fa0b6d1ea8948893df9